deployment/k8s/ml-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-consumer
  namespace: campus
  labels:
    app: ml-consumer
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-consumer
  template:
    metadata:
      labels:
        app: ml-consumer
    spec:
      containers:
        - name: ml-consumer
          image: ghcr.io/smart-campus-digital-twin/campus-ml-consumer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9091
              name: metrics
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 128Mi
              cpu: 150m
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9091
            initialDelaySeconds: 20
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9091
            initialDelaySeconds: 30
            periodSeconds: 30
