deployment/k8s/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: campus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0
          args: ["start-dev", "--import-realm"]
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 256Mi
              cpu: 150m
            limits:
              memory: 1024Mi
              cpu: 400m
          readinessProbe:
            httpGet:
              path: /auth/realms/master
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 20
          volumeMounts:
            - name: realm-config
              mountPath: /opt/keycloak/data/import
      volumes:
        - name: realm-config
          configMap:
            name: keycloak-realm-config
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: campus
spec:
  selector:
    app: keycloak
  type: LoadBalancer
  ports:
    - port: 8083
      targetPort: 8080
