deployment/k8s/mosquitto-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-lb
  namespace: campus
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "tcp"
spec:
  type: LoadBalancer
  selector:
    app: mosquitto
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
      protocol: TCP
    - name: mqtts
      port: 8883
      targetPort: 8883
      protocol: TCP
