deployment/k8s/postgres-observer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-observer
  namespace: campus
  labels:
    app: postgres-observer
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
spec:
  containers:
    - name: adminer
      image: michalhosna/adminer:latest
      ports:
        - containerPort: 8080
      resources:
        requests:
          memory: 32Mi
          cpu: 25m
        limits:
          memory: 128Mi
          cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-observer
  namespace: campus
spec:
  selector:
    app: postgres-observer
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
